# fastapi-demo

./: Makefile  README.md  deta.json  main.py  pyproject.toml  requirements.txt
.deta/: prog_info  state
tests/: test_app.py  test_fastapi_demo.py
