[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = "A demo application powered by FastAPI."
authors = ["Zhong Liu <laxtiz@live.com>"]
license = "UNLICENSE"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py38"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
